# Tiburon_software_induction

./: .~lock.Task For Induction.docx#  README.md  Task For Induction.docx
install/: local_setup.sh  setup.sh
install/interfaces/share/interfaces/: local_setup.sh  package.sh
install/interfaces/share/interfaces/srv/: DrawShape_Request.msg
install/turtle_controller/lib/turtle_controller/: draw_shape_service  move_turtle  spiral_turtle  spiral_turtle_parameters
install/turtle_controller/share/turtle_controller/: package.sh  package.xml
install/turtle_interfaces/share/turtle_interfaces/: local_setup.sh  package.sh
install/turtle_interfaces/share/turtle_interfaces/cmake/: export_turtle_interfaces__rosidl_generator_cppExport.cmake  export_turtle_interfaces__rosidl_generator_pyExport.cmake  export_turtle_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  turtle_interfacesConfig.cmake  turtle_interfaces__rosidl_typesupport_cExport.cmake  turtle_interfaces__rosidl_typesupport_introspection_cExport.cmake
interfaces/: CMakeLists.txt  package.xml  setup.py
interfaces/interfaces/: shape_service.py
log/: latest_build
rosbag2_2025_10_31-20_07_16/: metadata.yaml  rosbag2_2025_10_31-20_07_16_0.db3
rosbag2_2025_10_31-20_19_14/: metadata.yaml  rosbag2_2025_10_31-20_19_14_0.db3
rosbag2_2025_10_31-20_22_31/: metadata.yaml  rosbag2_2025_10_31-20_22_31_0.db3
rosbag2_2025_10_31-20_23_54/: metadata.yaml  rosbag2_2025_10_31-20_23_54_0.db3
turtle_controller/: CMakeLists.txt  rosidl_generate_interfaces.py  setup.py
turtle_interfaces/: CMakeLists.txt
(+26 files in other folders)
