<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_controller</name>
  <version>0.0.0</version>
  <description>Turtle controller with custom DrawShape service</description>

  <maintainer email="yami@todo.todo">yami</maintainer>
  <license>Apache License 2.0</license>

  <!-- Core dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>turtle_interfaces</depend>

  <!-- For generating and using custom .srv -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- Needed for rosidl to find interfaces -->
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>

